second page, directions.html added so there is no conflict with backend development. changed schema to better reflect wireframe design for 2nd page.  fixed navbar to stay on top and content does not override the navbar. added new container and dropdown boxes for car specs. changed borders and some font colors for better readability.  changed some margins to provide a little space between containers for a cleaner professional look.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,22 +21,18 @@ html {
   min-height: 100%;
 }
 
-#add-trip {
-  font-weight: bold;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color: white;
-  background-color: #90ee90;
-
-}
-
-#basic-addon1, #basic-addon2 {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
 /* ---------NAV START---------- */
 
 .navbar-trip {
   background-color: white;
+  height: 70px;
+}
+
+.navbar {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  height: 70px;
 }
 
 #logo {
@@ -51,7 +47,7 @@ html {
   /* Typography */
   font-size: 40px;
   font-weight: thin;
-  color: #fff;
+  color: #000;
 
   /* Visual */
   background: #90ee90;
@@ -68,10 +64,23 @@ html {
 }
 
 .navbar-nav  {
-  color: #4aaaa5;
+  color: black;
 }
 
 /* --------NAV END---------- */
+
+/*-----------Submit button 
+query to get directions on trip--------*/
+
+#add-trip {
+  font-weight: bold;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color: #000;
+  background-color: #90ee90;
+
+}
+
+/*end submit*/
 
 .header {
   /* Positioning */
@@ -116,56 +125,87 @@ html {
 /*PAGE 2 STYLING*/
 
 #Google-Maps-Display {
-  border-style: solid;
+  background-color: #fff;
+  border-style: ridge;
   border-color: purple;
-  border-width: 10px;
-  height: 400px;
-  margin-top: 70px;
-  color: white;
+  border-width: 2px;
+  height: 600px;
+  width: 57.3%;
+  margin-top: 80px;
+  margin-right: 5px;
+  color: #000;
   text-align: center;
   font-size: 40px;
 }
 
+#Car-specs,
 #Route-Results {
-  border-style: solid;
-  border-color: purple;
-  border-width: 10px;
-  height: 400px;
-  margin-top: 70px;
+  background-color: #fff;
+  border-style: ridge;
+  border-color: #000;
+  border-width: 2px;
+  height: 295px;
+  margin-top: 80px;
+  margin-left: 5px;
 }
 
-#Drive-Results {
-  border-style: solid;
-  border-color: #90ee90;
-  border-width: 10px;
-  height: 100px;
-  margin-top: 30px;
-  color: white;
-  text-align: center;
-  font-size: 40px;
+#Car-specs {
+  margin-top: 10px;
 }
-
+#Drive-Results,
 #Public-Trainsit-Results {
   border-style: solid;
-  border-color: #90ee90;
-  border-width: 10px;
+  border-color: #006600;
+  border-width: 1px;
   height: 100px;
-  margin-top: 30px;
-  color: white;
+  width: 90%;
+  margin-top: 20px;
+  margin-left: 15px;
+  color: #000;
   text-align: center;
-  font-size: 40px;
+  font-size: 20px;
 }
 
-#Public-Trainsit-Directions {
-  border-style: solid;
-  border-color: purple;
-  border-width: 10px;
-  height: 100px;
-  margin-top: 30px;
-  color: white;
+p {
+  color: #4d1a00;
   text-align: center;
-  font-size: 40px;
+  /*font-size: 20px;*/
 }
+
+h4 {
+  color: #4d1a00;
+  text-align: center;
+  font-size: 20px;
+}
+/*-----CAR INFO PULLDOWN BOXES------*/
+#car-make,
+#car-model,
+#car-year  {
+  border-style: solid;
+  border-color: #006600;
+  border-width: 1px;
+  height: 55px;
+  width: 40%;
+  margin-top: 20px;
+  margin-left: 15px;
+  color: #000;
+  text-align: center;
+  font-size: 18px;
+}
+
+/*---------PUBLIC TRANSIT DIRECTIONS BOX BELOW GOOGLE MAP-------*/
+#Public-Transit-Directions {
+  background-color: #fff;
+  border-style: solid;
+  border-color: #663300;
+  border-width: 2px;
+  height: 150px;
+  width: 97.5%;
+  margin-top: 30px;
+  margin-left: 15px;
+  color: #000;
+  text-align: center;
+  font-size: 25px;
 }
 
 
